compiler-core/src/nix/tests/snapshots/glistix_core__nix__tests__assignments__assert.snap
---
source: compiler-core/src/nix/tests/assignments.rs
expression: "fn go(x) { let assert 1 = x }"
snapshot_kind: text
---
let
  inherit (builtins.import ./../gleam.nix) makeError;
  
  go =
    x:
    if x != 1 then
      builtins.throw
        (makeError
          "let_assert"
          "my/mod"
          1
          "go"
          "Pattern match failed, no pattern matched the value."
          { value = x; })
    else x;
in
{ }
