compiler-core/src/nix/tests/snapshots/glistix_core__nix__tests__assignments__assert1.snap
---
source: compiler-core/src/nix/tests/assignments.rs
expression: "fn go(x) { let assert #(1, 2) = x }"
snapshot_kind: text
---
----- SOURCE CODE
fn go(x) { let assert #(1, 2) = x }

----- COMPILED NIX
let
  inherit (builtins.import ./../gleam.nix) makeError;
  
  go =
    x:
    if (builtins.elemAt x 0) != 1 || (builtins.elemAt x 1) != 2 then
      builtins.throw
        (makeError
          "let_assert"
          "my/mod"
          1
          "go"
          "Pattern match failed, no pattern matched the value."
          { value = x; })
    else x;
in
{ }
