compiler-core/src/nix/tests/snapshots/glistix_core__nix__tests__assignments__correct_variable_renaming_in_assigned_functions.snap
---
source: compiler-core/src/nix/tests/assignments.rs
expression: "\npub fn debug(x) {\n  let x = x\n  fn(x) {\n    x + 1\n    let x = x\n    let x = x\n    x\n  }\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn debug(x) {
  let x = x
  fn(x) {
    x + 1
    let x = x
    let x = x
    x
  }
}


----- COMPILED NIX
let
  debug =
    x:
    let
      x'1 = x;
    in
    x: let _' = x + 1; x'1 = x; x'2 = x'1; in builtins.seq _' x'2;
in
{ inherit debug; }
