compiler-core/src/nix/tests/snapshots/glistix_core__nix__tests__assignments__escaped_variables_in_constants.snap
---
source: compiler-core/src/nix/tests/assignments.rs
expression: "\npub const with = 5\npub const in = with\n"
---
----- SOURCE CODE

pub const with = 5
pub const in = with


----- COMPILED NIX
let with' = 5; in' = with'; in { inherit with' in'; }
