compiler-core/src/nix/tests/snapshots/glistix_core__nix__tests__assignments__let_assert_string_prefix.snap
---
source: compiler-core/src/nix/tests/assignments.rs
expression: "\npub fn main(x) {\n  let assert \"Game \" <> id = x\n  id\n}\n"
---
let
  inherit (builtins.import ./../gleam.nix) strHasPrefix makeError;
  
  main =
    x:
      let
        _assert' =
          if !(strHasPrefix "Game " x)
          then
            builtins.throw
              (makeError
                "assignment_no_match"
                "my/mod"
                3
                "main"
                "Assignment pattern did not match"
                { value = x; })
          else null;
        id = builtins.seq _assert' (builtins.substring 5 (-1) x);
      in builtins.seq _assert' id;
in { inherit main; }
