compiler-core/src/nix/tests/snapshots/glistix_core__nix__tests__assignments__message.snap
---
source: compiler-core/src/nix/tests/assignments.rs
expression: "\npub fn unwrap_or_panic(value) {\n  let assert Ok(inner) = value as \"Oops, there was an error\"\n  inner\n}\n"
---
----- SOURCE CODE

pub fn unwrap_or_panic(value) {
  let assert Ok(inner) = value as "Oops, there was an error"
  inner
}


----- COMPILED NIX
let
  inherit (builtins.import ./../gleam.nix) makeError;
  
  unwrap_or_panic =
    value:
    let
      _assert' =
        if value.__gleamTag != "Ok" then
          builtins.throw
            (makeError
              "let_assert"
              "my/mod"
              3
              "unwrap_or_panic"
              "Oops, there was an error"
              { value = value; })
        else null;
      inner = builtins.seq _assert' value._0;
    in
    builtins.seq _assert' inner;
in
{ inherit unwrap_or_panic; }
