compiler-core/src/nix/tests/snapshots/glistix_core__nix__tests__assignments__nested_binding.snap
---
source: compiler-core/src/nix/tests/assignments.rs
expression: "\nfn go(x) {\n  let assert #(a, #(b, c, 2) as t, _, 1) = x\n}\n"
---
let
  inherit (builtins.import ./../gleam.nix) makeError;
  
  go =
    x:
      if
        (builtins.elemAt (builtins.elemAt x 1) 2) != 2 ||
        (builtins.elemAt x 3) != 1
      then
        builtins.throw
          (makeError
            "assignment_no_match"
            "my/mod"
            3
            "go"
            "Assignment pattern did not match"
            { value = x; })
      else x;
in { }
